Ordered parameters alphabetically, broke up Accordion class, added margin (1em 0 0) to accordion-toggle, and fixed some white space issues.

--- a/src/accordion/Accordion.scss
+++ b/src/accordion/Accordion.scss
@@ -9,45 +9,43 @@ $accordion-border-color:rgba(0,0,0,0.1);
 .accordion {
   display: flex;
   flex-direction: column;
+}
 
-  > .accordion-toggle {
-    background-color: rgba(0,0,0,0.05);
-    border: 1px solid $accordion-border-color;
-    cursor: pointer;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 12px 16px;
+.accordion-toggle {
+  align-items: center;
+  background-color: rgba(0,0,0,0.05);
+  border: 1px solid $accordion-border-color;
+  cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  margin: 1em 0 0;
+  padding: 12px 16px;
 
-    &:before {
-      text-align: center;
-      flex: none;
-      align-self: center;
-      padding-right: 16px;
-      @mixin icon '\e5ce';
-    }
-
-    &:hover {
-      text-decoration: underline;
-    }
+  &:before {
+    align-self: center;
+    flex: none;
+    padding-right: 16px;
+    text-align: center;
+    @mixin icon '\e5ce';
   }
 
-  > .accordion-content {
-    padding: 0 1em 1em;
-    border-bottom: 1px solid $accordion-border-color;
-    border-left: 1px solid $accordion-border-color;
-    border-right: 1px solid $accordion-border-color;
-    flex: 1;
+  &:hover {
+    text-decoration: underline;
   }
+}
+
+.accordion-content {
+  border-bottom: 1px solid $accordion-border-color;
+  border-left: 1px solid $accordion-border-color;
+  border-right: 1px solid $accordion-border-color;
+  flex: 1;
+  padding: 0 1em 1em;
 }
 
 .accordion-closed {
 
-  > .accordion-toggle {
-
-    &:before {
+  > .accordion-toggle:before {
       @mixin icon '\e5cf';
-    }
   }
 
   > .accordion-content {
@@ -62,42 +60,42 @@ $accordion-border-color:rgba(0,0,0,0.1);
 
   > .accordion {
     > .accordion-toggle {
-      margin: 0;
       border-top: none;
+      margin: 0;
     }
   }
 }
 
 /* Section -- Toggle content */
 .accordion-section {
-  margin: 1em 0;
   border: none;
+  margin: 1em 0;
 
   > .accordion-content {
-    padding: 0;
     border: none;
+    padding: 0;
   }
 
   > .accordion-toggle {
-    display: inline-block;
-    position: relative;
-    margin: 1em 0 0;
-    padding:0;
-    border: none;
     background:none;
+    border: none;
+    display: inline-block;
+    margin: 1em 0 0;
+    padding: 0;
+    position: relative;
 
     &:before {
-      position: static;
       display: inline-block;
       font-size: 16px;
-      width: 1em;
-      text-align:left;
       padding: 0;
+      position: static;
+      text-align: left;
+      width: 1em;
     }
 
     &:hover {
-      text-decoration: underline;
       background: none;
+      text-decoration: underline;
     }
   }
 }
